--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
       <meta charset="utf-8">
       <title>Conference</title>
       <link rel="stylesheet" type="text/css" href="css/app.css"/>
+      <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app" />
