--- a/www/index.html
+++ b/www/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app" />
     <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="cordova.js" type="text/javascript"></script>
   </body>
 </html>
